--- a/compose/django/Dockerfile-dev
+++ b/compose/django/Dockerfile-dev
@@ -1,11 +1,12 @@
-FROM python:3.5
+FROM python:3.8
 
 ENV PYTHONUNBUFFERED 1
 
 # Install spatialite
 RUN apt-get update && apt-get install --no-install-recommends -y \
-	gettext spatialite-bin libsqlite3-0 libsqlite3-dev gdal-bin libgdal-dev python3-gdal \
-	libspatialite5 libspatialite-dev libgeos-dev libproj-dev python-pysqlite2\
+	gettext binutils libproj-dev spatialite-bin \
+	gdal-bin libgdal-dev python3-gdal libgeos-dev libproj-dev \
+	libsqlite3-0 libsqlite3-dev python-pysqlite2 \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Requirements have to be pulled and installed here, otherwise caching won't work
