--- a/dev.yml
+++ b/dev.yml
@@ -80,7 +80,7 @@ services:
       - 9200:9200
 
   kibana:
-    image: kibana
+    image: kibana:7.10.1
     links:
       - elasticsearch
     ports:
