--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,15 @@ services:
   postgres:
     build: ./compose/postgres
     volumes:
-      - /root/data/postgres:/var/lib/postgresql/data
-      - /root/data/postgres_backups:/backups
+      - /mnt/volume_ams3_01/data/postgres:/var/lib/postgresql/data
+      - /mnt/volume_ams3_01/data/postgres_backups:/backups
     env_file: .env
 
   #mysql:
   #  build: ./compose/mysql
   #  volumes:
-  #    - /root/data/mysql:/var/lib/mysql
-  #    - /root/data//mysql_backups:/backups
+  #    - /mnt/volume_ams3_01/data/mysql:/var/lib/mysql
+  #    - /mnt/volume_ams3_01/data//mysql_backups:/backups
   #  ports:
   #    - "3306"
   #  env_file: .env
@@ -34,7 +34,9 @@ services:
     env_file: .env
     volumes:
       - /staticfiles
-      - /root/data/media:/media
+      - /mnt/volume_ams3_01/data/media:/media
+    links:
+      - "elasticsearch"
 
   nginx:
     build: ./compose/nginx
@@ -81,6 +83,8 @@ services:
     depends_on:
      - postgres
      - redis
+    links:
+      - "elasticsearch"
     command: celery -A ojoalplato.taskapp worker -l INFO
 
   elasticsearch:
@@ -95,8 +99,8 @@ services:
         soft: -1
         hard: -1
     mem_limit: 1g
-    ports:
-      - 9200:9200
+    #ports:
+    #  - 9200:9200
 
   #celerybeat:
   #  build:
