--- a/compose/django/Dockerfile-dev
+++ b/compose/django/Dockerfile-dev
@@ -6,7 +6,7 @@ ENV PYTHONUNBUFFERED 1
 RUN apt-get update && apt-get install --no-install-recommends -y \
 	gettext binutils libproj-dev spatialite-bin \
 	gdal-bin libgdal-dev python3-gdal libgeos-dev libproj-dev \
-	libsqlite3-0 libsqlite3-dev python-pysqlite2 \
+	#libsqlite3-0 libsqlite3-dev python-pysqlite2 \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Requirements have to be pulled and installed here, otherwise caching won't work
